riosapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: riosapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Specify the ClusterIssuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # Force HTTPS redirection
spec:
  ingressClassName: "nginx"  # Explicitly reference the IngressClass
  tls:  # TLS settings for enabling HTTPS
  - hosts:
    - "riosapp.jason-suarez.com"
    secretName: mysite-tls  # The secret that contains the TLS certificate
  rules:
  - host: "riosapp.jason-suarez.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: riosapp-service
            port:
              number: 80  # Ensure this matches the port your service is configured to expose
